# starline-hackathon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  default.md  deploy.sh  package.xml  update_subtree.sh
catkin_tws/src/tb_gazebo/: CMakeLists.txt  package.xml
catkin_tws/src/tb_gazebo/launch/: empty_turtletown.launch  tb_world.launch  world.launch
catkin_tws/src/tb_gazebo/model_db/tb_city/: model.config  model.sdf
catkin_tws/src/tb_gazebo/model_db/turtletown/: model.sdf
catkin_tws/src/tb_gazebo/param/: mux.yaml
catkin_tws/src/tb_gazebo/worlds/: qualification.world  tb_city.world
catkin_tws/src/tb_gazebo_description/: CMakeLists.txt  package.xml
catkin_tws/src/tb_gazebo_description/robots/: kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro
catkin_tws/src/tb_gazebo_description/urdf/sensors/: asus_xtion_pro.urdf.xacro  kinect.urdf.xacro
catkin_tws/src/tb_gazebo_msgs/: CMakeLists.txt  package.xml
catkin_tws/src/tb_gazebo_plugins/src/: gazebo_ros_kobuki.cpp  gazebo_ros_kobuki_loads.cpp
catkin_tws/src/turtlebot_description/: CMakeLists.txt  package.xml
catkin_ws/src/solution_1/: CMakeLists.txt  package.xml
catkin_ws/src/solution_1/lane_detection/: camera_undistort.py  lane_detector.py  lane_image_prepare.py
catkin_ws/src/solution_1/lane_detection/cfg/: dyn_lane_detector.cfg  dyn_lane_image_prepare.cfg
catkin_ws/src/solution_1/launch/: 3d_sensor.launch  amcl-merged.launch  amcl.launch  gmapping-2.launch  gmapping.launch  kinect_scan.launch  lane_image_prepare.yaml  laserscans_merge.launch  main.launch  main_1.launch  main_2.launch  merge_kinect_hokuyo.launch  move_base.launch
catkin_ws/src/solution_1/map/: map_1.pgm  map_1.yaml
catkin_ws/src/solution_1/navigation_parameters/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/solution_1/params/: amcl.yaml  base_local_planner_params.yaml  local_costmap_params.yaml
catkin_ws/src/solution_1/rqt/: lane_detector.perspective  semantic.perspective
catkin_ws/src/solution_1/rviz/: tb_config.rviz
catkin_ws/src/solution_1/scripts/: config.py  merge_grids.py  publish_wall_to_costmap.py
catkin_ws/src/solution_2/: CMakeLists.txt  package.xml
catkin_ws/src/solution_2/lane_detection/: 2503_lane  lane_image_prepare.py  test_image_publisher.py
catkin_ws/src/solution_2/lane_detection/cfg/: dyn_lane_image_prepare.cfg
catkin_ws/src/solution_2/launch/: amcl.launch  find_object_2d.launch  find_object_3d.launch  lane_detect.launch  lane_image_prepare.yaml  remote_find_object_2d.launch  stage_sim.launch  test_find_object_2d.launch  test_lane_detect.launch  test_lane_image_prepare.yaml
catkin_ws/src/solution_2/maps/: map1_markup_all.yaml  map1_markup_borders.yaml  map1_markup_lines.yaml  map1_r.pgm  map1_r.yaml
catkin_ws/src/solution_2/object_detection/: settings.ini  vocabulary.yaml
catkin_ws/src/solution_2/object_detection/objects/: settings.ini
catkin_ws/src/solution_2/params/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/solution_2/params_urpylka/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
catkin_ws/src/solution_2/rviz/: rviz_navigation_cc.rviz
catkin_ws/src/solution_2/scripts/: merge_grids.py  publish_wall_to_costmap.py
catkin_ws/src/solution_3/: CMakeLists.txt  package.xml
catkin_ws/src/solution_3/launch/: detect_objects.launch  detect_objects.yaml  stimulator_stack.launch  test_detect_node.launch
catkin_ws/src/solution_3/objects/: settings.ini
catkin_ws/src/solution_3/params_urpylka/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  teb_local_planner_params.yaml
catkin_ws/src/solution_3/src/: detect_objects.py  fm.py  locker_oncoming_traffic.py  moving_stack.py  publish_wall_to_costmap.py  state_machine.py  user_control.py
catkin_ws/turtlebot/: go_to_specific_point_on_map.py  goforward.py  goto.sh
deploy/: turtle_express.service
docker/: Dockerfile  build_docker.sh  docker-compose.yaml  into_docker.sh  remove_dangling_imgs_docker.bash  run_docker.sh  run_docker_by_compose.sh  run_rviz.sh
docker/base-image/: Dockerfile  turtlebot_entrypoint.sh
docker/kobuki/: Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
docker/simulator/: Dockerfile  build_docker.sh  into_docker.sh  run_docker.sh
docs/: README.md  bots_list.md  link.txt
drivers_tws/src/kobuki/: README.md
drivers_tws/src/tb/: CMakeLists.txt
drivers_tws/src/tb/launch/: astra.launch  base.launch  base_minimal.launch  launch_all.launch  rplidar.launch  teleop.launch
drivers_ws/src/tb/: package.xml
drivers_ws/src/tb/launch/: base.launch  rplidar.launch  tb.launch  teleop.launch
launch/: build_slam_map.launch  main.launch  slam_navigation.launch  telegrambot.launch  turtle_express.launch
map/: urpylka-1.pgm  urpylka-1.yaml  urpylka-2.yaml  urpylka-3.pgm  urpylka-3.yaml
scripts/: 99-kobuki.rules  create_udev.bash  docker_install.bash  host_setup.bash  install_stuff.bash  kobuki.rules  kobuki_setup.bash  ros_remote_env.bash  setup.bash  update_subtree.bash  update_subtree.sh
scripts/docker/kobuki/: Dockerfile  build_docker.sh  run_docker.sh
scripts/docker/simulator/: Dockerfile  build_docker.sh  run_docker.sh
scripts/udev_rules/: 10-astra.rules  30-kobuki.rules  create_udev.bash
simulator_ws/rviz/: tb_config.rviz
simulator_ws/src/tb_gazebo/: package.xml
simulator_ws/src/tb_gazebo/launch/: teleop.launch  turtletown.launch
simulator_ws/src/tb_gazebo/model_db/turtletown/: model.config
simulator_ws/src/tb_gazebo/worlds/: turtletown.world
simulator_ws/src/tb_gazebo_description/robots/: kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  (+1 more)
simulator_ws/src/tb_gazebo_plugins/: CMakeLists.txt  package.xml
simulator_ws/src/tb_gazebo_plugins/src/: gazebo_ros_kobuki_updates.cpp
src/: bot.py  main.py  object_model.py  telegram.py  telegrambot.py  turtle_express.py
(+14 files in other folders)
