<package>
  <name>tb_gazebo</name>
  <version>2.2.3</version>
  <description>Gazebo launchers and worlds for TurtleBot simulation</description>
  <maintainer email="ndema2301@gmail.com">Nikolay Dema</maintainer>
  <license>Apache License, Version 2.0</license>
  <url type="repository">https://github.com/NickoDema/kobuki</url>
  <url type="bugtracker">https://github.com/NickoDema/kobuki/issues</url>
  <author email="ndema2301@gmail.com">Nikolay Dema</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <run_depend>yocs_cmd_vel_mux</run_depend> -->
  <!-- <run_depend>depthimage_to_laserscan</run_depend> -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>xacro</run_depend>
</package>
