<package>
  <name>tb_gazebo_description</name>
  <version>2.4.2</version>
  <description>
     tb_gazebo_description provides a complete 3D model of the TurtleBot for simulation and visualization. The files in this package are parsed and used by a variety of other components. Most users will not interact directly with this package.
  </description>
  <author>Melonee Wise</author>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <maintainer email="ndema2301@gmail.com">Nikolay Dema</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
