<?xml version="1.0"?>
<package format="2">
  <name>solution_1</name>
  <version>1.0.0</version>
  <description>The solution_1 package</description>

  <maintainer email="goldartt@gmail.com">Arthur Golubtsov</maintainer>
  <author email="urpylka@gmail.com">Artem Smirnov</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package format specifier version 2.0 allows specifying dependencies for both
   build- and runtime in a single <depend> element -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gmapping</depend>
  <depend>move_base</depend>
  <depend>opencv3</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
