<?xml version="1.0"?>
<package format="2">
  <name>solution_2</name>
  <version>1.0.0</version>
  <description>The solution_1 package</description>

  <maintainer email="goldartt@gmail.com">Arthur Golubtsov</maintainer>
  <author email="urpylka@gmail.com">Artem Smirnov</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gmapping</depend>
  <depend>move_base</depend>
  <depend>opencv3</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
